kubernetes/efk/elasticsearch/es-statefulset.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  labels:
    app: elasticsearch
    role: master
  name: elasticsearch-master
  namespace: elk
spec:
  replicas: 3
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: elasticsearch
      role: master
  template:
    metadata:
      labels:
        app: elasticsearch
        role: master
    spec:
      serviceAccountName: elasticsearch-admin
      containers:
        - name: elasticsearch-master
          image: docker.elastic.co/elasticsearch/elasticsearch:6.8.13
          command: ["bash", "-c", "ulimit -l unlimited && sysctl -w vm.max_map_count=262144 && exec su elasticsearch docker-entrypoint.sh"]
          ports:
            - containerPort: 9200
              protocol: TCP
            - containerPort: 9300
              protocol: TCP
          securityContext:
            privileged: true
---
kind: Service
apiVersion: v1
metadata:
  labels:
    app: elasticsearch
  name: elasticsearch-discovery
  namespace: elk
spec:
  ports:
    - port: 9300
      targetPort: 9300
  selector:
    app: elasticsearch
    role: master
---
apiVersion: v1
kind: Service
metadata:
  name: elasticsearch-data-service
  namespace: elk
  labels:
    app: elasticsearch
    role: data
spec:
  ports:
    - port: 9200
      name: outer
    - port: 9300
      name: inner
  clusterIP: None
  selector:
    app: elasticsearch
    role: data
---
kind: StatefulSet
apiVersion: apps/v1
metadata:
  labels:
    app: elasticsearch
    role: data
  name: elasticsearch-data
  namespace: elk
spec:
  replicas: 2
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: elasticsearch
  serviceName: elasticsearch-data-service
  template:
    metadata:
      labels:
        app: elasticsearch
        role: data
    spec:
      serviceAccountName: elasticsearch-admin
      containers:
        - name: elasticsearch-data
          image: docker.elastic.co/elasticsearch/elasticsearch:6.8.13
          command: ["bash", "-c", "ulimit -l unlimited && sysctl -w vm.max_map_count=262144 && chown -R elasticsearch:elasticsearch /usr/share/elasticsearch/data && exec su elasticsearch docker-entrypoint.sh"]
          ports:
            - containerPort: 9200
              protocol: TCP
            - containerPort: 9300
              protocol: TCP
          volumeMounts:
            - name: elasticsearch-data-volume
              mountPath: /usr/share/elasticsearch/data
          securityContext:
            privileged: true
      securityContext:
        fsGroup: 1000
  volumeClaimTemplates:
    - metadata:
        name: elasticsearch-data-volume
        annotations:
          volume.beta.kubernetes.io/storage-class: "managed-nfs-storage"
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 15Gi
---
kind: Service
apiVersion: v1
metadata:
  labels:
    app: elasticsearch
  name: elasticsearch-service
  namespace: elk
spec:
  ports:
    - port: 9200
      targetPort: 9200
  selector:
    app: elasticsearch
  type: NodePort
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  labels:
    app: elasticsearch
  name: elasticsearch-ingress
  namespace: elk
spec:
  rules:
    - host: elasticsearch.kube.com
      http:
        paths:
          - backend:
              serviceName: elasticsearch-service
              servicePort: 9200
